--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
-                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+                <li><a class="btn-primary" href="">Hire Me</a></li>
             </ul>
         </nav>
         <div class="banner">
